Fix text wrapping for home page level.

--- a/app/javascript/src/application.scss
+++ b/app/javascript/src/application.scss
@@ -320,7 +320,7 @@ nav.navbar {
 
 .level {
   .level-item {
-    flex-basis: 100px;
+    white-space: nowrap;
     margin: 0;
     padding: 5px;
   }
